# docubot

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.claude/hooks/: session-start.sh
.cursor/: hooks.json
.cursor/hooks/: common.sh  session-end.sh  session-start.sh  session-track-edit.sh  stop-finalize.sh  workspace-open.sh
.docubot/: config.yaml  manifest.json
.docubot/metadata/: project.yaml
.docubot/schema/: manifest.schema.json  project-metadata.schema.json
.githooks/: post-commit  pre-commit  prepare-commit-msg
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_MANAGEMENT_AND_SHARING.md  FAIR_CHECKLIST.md
metadata/: datacite.json
src/docubot/: __init__.py  __main__.py  architecture.py  blocks.py  changelog.py  cli.py  components.py  config.py  fingerprint.py  git_util.py  paths.py  perf.py  readme.py  scaffold.py  session.py  stale.py  state.py
src/docubot/metadata/: __init__.py  citation.py  compliance.py  datacite.py  fair.py  inference.py  nih_dms.py  project.py  report.py  schema.py  validate.py
src/docubot/providers/: __init__.py  base.py  openai_compat.py
templates/: ARCHITECTURE.md.tpl  CITATION.cff.tpl  DMS_PLAN.md.tpl  FAIR_CHECKLIST.md.tpl  README.md.tpl  project.yaml.tpl
tests/: test_blocks.py  test_changelog.py  test_citation.py  test_compliance_validate.py  test_components.py  test_datacite.py  test_fair.py  test_inference.py  test_nih_dms.py  test_openai_compat.py  test_perf.py  test_schema.py  test_session_flow.py  test_stale.py
