[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docubot"
version = "0.1.0"
description = "Portable hook-driven documentation agent for AI-assisted development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "David Pletta" }]
keywords = ["documentation", "changelog", "cursor", "hooks", "ai-assisted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.1",
    "jsonschema>=4.23",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
docubot = "docubot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docubot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
